// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defaultProps should render correctly for className 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-56 {
  position: relative;
}

.emotion-55.emotion-55.emotion-55 {
  max-width: 100%;
  width: 100%;
  max-height: 300px;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-50.emotion-50.emotion-50 {
  padding: 0.5rem 0;
  overflow-y: scroll;
}

.emotion-15 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(var(--bb-palette-default,#000000),var(--bb-palette-white600,#000000));
  border: 1px solid var(--bb-palette-white900,#000000);
  border-radius: 6px;
  color: var(--bb-palette-text,#000000);
  height: 2.75em;
  padding: 0.4em 2em 0.4em 0.8em;
  line-height: 1.5;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0.4em 0.8em;
}

.emotion-15[disabled],
.emotion-15[aria-disabled="true"] {
  background: var(--bb-palette-white700,#000000);
  box-shadow: unset;
}

.emotion-15[disabled] + .bb-Icon {
  color: var(--bb-palette-gray400,#000000);
  fill: var(--bb-palette-gray400,#000000);
}

.emotion-15:focus {
  outline: unset;
  z-index: 2;
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primaryTint,#000000) 0px 0px 0px 3px !important;
}

.emotion-15[aria-expanded="true"] {
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primaryTint,#000000) 0px 0px 0px 3px !important;
}

.emotion-2 {
  max-width: calc(100% - 4rem);
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  min-width: 4rem;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-left: -0.5rem;
  margin-top: -0.5rem;
}

.emotion-7.emotion-7.emotion-7 > * {
  margin-left: 0.5rem;
  margin-top: 0.5rem;
}

.emotion-3 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-54 {
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-51 {
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02) !important;
  padding: 0.5rem 0;
  width: 100%;
  position: absolute;
  min-width: 200px;
  width: unset;
}

.emotion-52 {
  background-color: var(--bb-palette-background,#000000);
  border-radius: 6px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-52:focus {
  outline: none;
  box-shadow: var(--bb-palette-primary200,#000000) 0px 0px 0px 3px;
}

.emotion-21 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
  -webkit-transition: background-color 0.1s;
  transition: background-color 0.1s;
}

a.emotion-21 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.emotion-21:hover {
  color: unset;
  fill: unset;
}

.emotion-21[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-21:not(:disabled):focus {
  outline: unset;
  background-color: var(--bb-palette-white600,#000000);
}

.emotion-21:not(:disabled):hover {
  background-color: var(--bb-palette-white600,#000000);
}

.emotion-21:not(:disabled):focus:active,
.emotion-21:not(:disabled):hover:active {
  background-color: var(--bb-palette-white700,#000000);
}

.emotion-21 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-20.emotion-20.emotion-20 {
  font-weight: 300;
}

.emotion-20.emotion-20.emotion-20[aria-selected="true"] {
  background-color: var(--bb-palette-primaryTint,#000000);
  color: var(--bb-palette-primary900,#000000);
  background-color: #eae8fc;
}

.emotion-20.emotion-20.emotion-20[aria-selected="true"]:hover {
  background-color: #eae8fc;
}

.emotion-20.emotion-20.emotion-20[aria-disabled="true"] {
  color: var(--bb-palette-gray100,#000000);
}

.emotion-16 {
  line-height: 1.2;
}

abbr.emotion-16 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-16 {
  font-family: monospace;
}

i.emotion-16 {
  font-style: italic;
}

kbd.emotion-16 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-16 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-16 {
  font-weight: bold;
}

sub.emotion-16,
sup.emotion-16 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-16,
u.emotion-16 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.emotion-16,
cite.emotion-16,
var.emotion-16,
em.emotion-16 {
  font-style: italic;
}

kbd.emotion-16,
pre.emotion-16,
samp.emotion-16 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-16 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-28.emotion-28.emotion-28 {
  font-weight: 300;
}

.emotion-28.emotion-28.emotion-28[aria-selected="true"] {
  background-color: var(--bb-palette-primaryTint,#000000);
  color: var(--bb-palette-primary900,#000000);
}

.emotion-28.emotion-28.emotion-28[aria-selected="true"]:hover {
  background-color: #eae8fc;
}

.emotion-28.emotion-28.emotion-28[aria-disabled="true"] {
  color: var(--bb-palette-gray100,#000000);
}

.emotion-58 {
  color: var(--bb-palette-primary,#000000) !important;
}

<div
  class="emotion-56 emotion-0 emotion-58 test bb-Box bb-SelectMenu"
>
  <div
    aria-controls="test"
    aria-expanded="false"
    aria-haspopup="listbox"
    class="emotion-0 emotion-1 emotion-15 bb-SelectMenuButton bb-Box"
    loop=""
    role="button"
    tabindex="0"
  >
    <div
      class="emotion-0 emotion-1 emotion-2 bb-SelectMenuButtonText bb-Box"
    >
      Search for a fruit...
    </div>
    <div
      class="emotion-0 emotion-1 emotion-12 bb-SelectMenuButtonIconsWrapper bb-Box"
    >
      <div
        class="emotion-7 emotion-0 emotion-1 bb-Box bb-Set"
      >
        <svg
          class="emotion-3 emotion-0 emotion-1 emotion-6 bb-SelectMenuButtonIcon bb-Box bb-Icon"
          role="img"
          viewBox="0 0 448 512"
        >
          <path
            d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    aria-orientation="vertical"
    class="emotion-51 emotion-52 emotion-0 emotion-54 emotion-55 bb-SelectMenuPopover bb-Box bb-DropdownMenuPopover"
    data-dialog="true"
    hidden=""
    id="test"
    loop=""
    role="listbox"
    style="display: none;"
    tabindex="-1"
  >
    <ul
      class="emotion-0 emotion-1 emotion-50 bb-SelectMenuItemsWrapper bb-Box"
    >
      <li
        aria-selected="false"
        class="emotion-20 emotion-21 emotion-0 emotion-1 bb-Box bb-DropdownMenuItem bb-SelectMenuItem"
        id="test-1"
        loop=""
        role="option"
        tabindex="0"
      >
        <span
          class="emotion-16 emotion-0 emotion-1 emotion-6 bb-SelectMenuItemText bb-Box bb-Text"
        >
          Apples
        </span>
      </li>
      <li
        aria-selected="false"
        class="emotion-28 emotion-21 emotion-0 emotion-1 bb-Box bb-DropdownMenuItem bb-SelectMenuItem"
        id="test-2"
        loop=""
        role="option"
        tabindex="-1"
      >
        <span
          class="emotion-16 emotion-0 emotion-1 emotion-6 bb-SelectMenuItemText bb-Box bb-Text"
        >
          Bananas
        </span>
      </li>
      <li
        aria-selected="false"
        class="emotion-28 emotion-21 emotion-0 emotion-1 bb-Box bb-DropdownMenuItem bb-SelectMenuItem"
        id="test-3"
        loop=""
        role="option"
        tabindex="-1"
      >
        <span
          class="emotion-16 emotion-0 emotion-1 emotion-6 bb-SelectMenuItemText bb-Box bb-Text"
        >
          Oranges
        </span>
      </li>
      <li
        aria-selected="false"
        class="emotion-28 emotion-21 emotion-0 emotion-1 bb-Box bb-DropdownMenuItem bb-SelectMenuItem"
        id="test-4"
        loop=""
        role="option"
        tabindex="-1"
      >
        <span
          class="emotion-16 emotion-0 emotion-1 emotion-6 bb-SelectMenuItemText bb-Box bb-Text"
        >
          Mangos
        </span>
      </li>
    </ul>
  </div>
</div>
`;

exports[`overrides styles.base should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-55.emotion-55.emotion-55 {
  max-width: 100%;
  width: 100%;
  max-height: 300px;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-50.emotion-50.emotion-50 {
  padding: 0.5rem 0;
  overflow-y: scroll;
}

.emotion-15 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(var(--bb-palette-default,#000000),var(--bb-palette-white600,#000000));
  border: 1px solid var(--bb-palette-white900,#000000);
  border-radius: 6px;
  color: var(--bb-palette-text,#000000);
  height: 2.75em;
  padding: 0.4em 2em 0.4em 0.8em;
  line-height: 1.5;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0.4em 0.8em;
}

.emotion-15[disabled],
.emotion-15[aria-disabled="true"] {
  background: var(--bb-palette-white700,#000000);
  box-shadow: unset;
}

.emotion-15[disabled] + .bb-Icon {
  color: var(--bb-palette-gray400,#000000);
  fill: var(--bb-palette-gray400,#000000);
}

.emotion-15:focus {
  outline: unset;
  z-index: 2;
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primaryTint,#000000) 0px 0px 0px 3px !important;
}

.emotion-15[aria-expanded="true"] {
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primaryTint,#000000) 0px 0px 0px 3px !important;
}

.emotion-2 {
  max-width: calc(100% - 4rem);
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  min-width: 4rem;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-left: -0.5rem;
  margin-top: -0.5rem;
}

.emotion-7.emotion-7.emotion-7 > * {
  margin-left: 0.5rem;
  margin-top: 0.5rem;
}

.emotion-3 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-54 {
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-51 {
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02) !important;
  padding: 0.5rem 0;
  width: 100%;
  position: absolute;
  min-width: 200px;
  width: unset;
}

.emotion-52 {
  background-color: var(--bb-palette-background,#000000);
  border-radius: 6px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-52:focus {
  outline: none;
  box-shadow: var(--bb-palette-primary200,#000000) 0px 0px 0px 3px;
}

.emotion-21 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
  -webkit-transition: background-color 0.1s;
  transition: background-color 0.1s;
}

a.emotion-21 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.emotion-21:hover {
  color: unset;
  fill: unset;
}

.emotion-21[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-21:not(:disabled):focus {
  outline: unset;
  background-color: var(--bb-palette-white600,#000000);
}

.emotion-21:not(:disabled):hover {
  background-color: var(--bb-palette-white600,#000000);
}

.emotion-21:not(:disabled):focus:active,
.emotion-21:not(:disabled):hover:active {
  background-color: var(--bb-palette-white700,#000000);
}

.emotion-21 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-20.emotion-20.emotion-20 {
  font-weight: 300;
}

.emotion-20.emotion-20.emotion-20[aria-selected="true"] {
  background-color: var(--bb-palette-primaryTint,#000000);
  color: var(--bb-palette-primary900,#000000);
  background-color: #eae8fc;
}

.emotion-20.emotion-20.emotion-20[aria-selected="true"]:hover {
  background-color: #eae8fc;
}

.emotion-20.emotion-20.emotion-20[aria-disabled="true"] {
  color: var(--bb-palette-gray100,#000000);
}

.emotion-16 {
  line-height: 1.2;
}

abbr.emotion-16 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-16 {
  font-family: monospace;
}

i.emotion-16 {
  font-style: italic;
}

kbd.emotion-16 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-16 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-16 {
  font-weight: bold;
}

sub.emotion-16,
sup.emotion-16 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-16,
u.emotion-16 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.emotion-16,
cite.emotion-16,
var.emotion-16,
em.emotion-16 {
  font-style: italic;
}

kbd.emotion-16,
pre.emotion-16,
samp.emotion-16 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-16 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-28.emotion-28.emotion-28 {
  font-weight: 300;
}

.emotion-28.emotion-28.emotion-28[aria-selected="true"] {
  background-color: var(--bb-palette-primaryTint,#000000);
  color: var(--bb-palette-primary900,#000000);
}

.emotion-28.emotion-28.emotion-28[aria-selected="true"]:hover {
  background-color: #eae8fc;
}

.emotion-28.emotion-28.emotion-28[aria-disabled="true"] {
  color: var(--bb-palette-gray100,#000000);
}

.emotion-56 {
  position: relative;
}

.emotion-56 {
  background-color: var(--bb-palette-red,#ff0000);
}

<div
  class="emotion-56 emotion-0 emotion-1 bb-Box bb-SelectMenu"
>
  <div
    aria-controls="test"
    aria-expanded="false"
    aria-haspopup="listbox"
    class="emotion-0 emotion-1 emotion-15 bb-SelectMenuButton bb-Box"
    loop=""
    role="button"
    tabindex="0"
  >
    <div
      class="emotion-0 emotion-1 emotion-2 bb-SelectMenuButtonText bb-Box"
    >
      Search for a fruit...
    </div>
    <div
      class="emotion-0 emotion-1 emotion-12 bb-SelectMenuButtonIconsWrapper bb-Box"
    >
      <div
        class="emotion-7 emotion-0 emotion-1 bb-Box bb-Set"
      >
        <svg
          class="emotion-3 emotion-0 emotion-1 emotion-6 bb-SelectMenuButtonIcon bb-Box bb-Icon"
          role="img"
          viewBox="0 0 448 512"
        >
          <path
            d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    aria-orientation="vertical"
    class="emotion-51 emotion-52 emotion-0 emotion-54 emotion-55 bb-SelectMenuPopover bb-Box bb-DropdownMenuPopover"
    data-dialog="true"
    hidden=""
    id="test"
    loop=""
    role="listbox"
    style="display: none;"
    tabindex="-1"
  >
    <ul
      class="emotion-0 emotion-1 emotion-50 bb-SelectMenuItemsWrapper bb-Box"
    >
      <li
        aria-selected="false"
        class="emotion-20 emotion-21 emotion-0 emotion-1 bb-Box bb-DropdownMenuItem bb-SelectMenuItem"
        id="test-1"
        loop=""
        role="option"
        tabindex="0"
      >
        <span
          class="emotion-16 emotion-0 emotion-1 emotion-6 bb-SelectMenuItemText bb-Box bb-Text"
        >
          Apples
        </span>
      </li>
      <li
        aria-selected="false"
        class="emotion-28 emotion-21 emotion-0 emotion-1 bb-Box bb-DropdownMenuItem bb-SelectMenuItem"
        id="test-2"
        loop=""
        role="option"
        tabindex="-1"
      >
        <span
          class="emotion-16 emotion-0 emotion-1 emotion-6 bb-SelectMenuItemText bb-Box bb-Text"
        >
          Bananas
        </span>
      </li>
      <li
        aria-selected="false"
        class="emotion-28 emotion-21 emotion-0 emotion-1 bb-Box bb-DropdownMenuItem bb-SelectMenuItem"
        id="test-3"
        loop=""
        role="option"
        tabindex="-1"
      >
        <span
          class="emotion-16 emotion-0 emotion-1 emotion-6 bb-SelectMenuItemText bb-Box bb-Text"
        >
          Oranges
        </span>
      </li>
      <li
        aria-selected="false"
        class="emotion-28 emotion-21 emotion-0 emotion-1 bb-Box bb-DropdownMenuItem bb-SelectMenuItem"
        id="test-4"
        loop=""
        role="option"
        tabindex="-1"
      >
        <span
          class="emotion-16 emotion-0 emotion-1 emotion-6 bb-SelectMenuItemText bb-Box bb-Text"
        >
          Mangos
        </span>
      </li>
    </ul>
  </div>
</div>
`;

exports[`props should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-56 {
  position: relative;
}

.emotion-55.emotion-55.emotion-55 {
  max-width: 100%;
  width: 100%;
  max-height: 300px;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-50.emotion-50.emotion-50 {
  padding: 0.5rem 0;
  overflow-y: scroll;
}

.emotion-15 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(var(--bb-palette-default,#000000),var(--bb-palette-white600,#000000));
  border: 1px solid var(--bb-palette-white900,#000000);
  border-radius: 6px;
  color: var(--bb-palette-text,#000000);
  height: 2.75em;
  padding: 0.4em 2em 0.4em 0.8em;
  line-height: 1.5;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0.4em 0.8em;
}

.emotion-15[disabled],
.emotion-15[aria-disabled="true"] {
  background: var(--bb-palette-white700,#000000);
  box-shadow: unset;
}

.emotion-15[disabled] + .bb-Icon {
  color: var(--bb-palette-gray400,#000000);
  fill: var(--bb-palette-gray400,#000000);
}

.emotion-15:focus {
  outline: unset;
  z-index: 2;
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primaryTint,#000000) 0px 0px 0px 3px !important;
}

.emotion-15[aria-expanded="true"] {
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primaryTint,#000000) 0px 0px 0px 3px !important;
}

.emotion-2 {
  max-width: calc(100% - 4rem);
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  min-width: 4rem;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-left: -0.5rem;
  margin-top: -0.5rem;
}

.emotion-7.emotion-7.emotion-7 > * {
  margin-left: 0.5rem;
  margin-top: 0.5rem;
}

.emotion-3 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-54 {
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-51 {
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02) !important;
  padding: 0.5rem 0;
  width: 100%;
  position: absolute;
  min-width: 200px;
  width: unset;
}

.emotion-52 {
  background-color: var(--bb-palette-background,#000000);
  border-radius: 6px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-52:focus {
  outline: none;
  box-shadow: var(--bb-palette-primary200,#000000) 0px 0px 0px 3px;
}

.emotion-21 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
  -webkit-transition: background-color 0.1s;
  transition: background-color 0.1s;
}

a.emotion-21 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.emotion-21:hover {
  color: unset;
  fill: unset;
}

.emotion-21[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-21:not(:disabled):focus {
  outline: unset;
  background-color: var(--bb-palette-white600,#000000);
}

.emotion-21:not(:disabled):hover {
  background-color: var(--bb-palette-white600,#000000);
}

.emotion-21:not(:disabled):focus:active,
.emotion-21:not(:disabled):hover:active {
  background-color: var(--bb-palette-white700,#000000);
}

.emotion-21 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-20.emotion-20.emotion-20 {
  font-weight: 300;
}

.emotion-20.emotion-20.emotion-20[aria-selected="true"] {
  background-color: var(--bb-palette-primaryTint,#000000);
  color: var(--bb-palette-primary900,#000000);
  background-color: #eae8fc;
}

.emotion-20.emotion-20.emotion-20[aria-selected="true"]:hover {
  background-color: #eae8fc;
}

.emotion-20.emotion-20.emotion-20[aria-disabled="true"] {
  color: var(--bb-palette-gray100,#000000);
}

.emotion-16 {
  line-height: 1.2;
}

abbr.emotion-16 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-16 {
  font-family: monospace;
}

i.emotion-16 {
  font-style: italic;
}

kbd.emotion-16 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-16 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-16 {
  font-weight: bold;
}

sub.emotion-16,
sup.emotion-16 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-16,
u.emotion-16 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.emotion-16,
cite.emotion-16,
var.emotion-16,
em.emotion-16 {
  font-style: italic;
}

kbd.emotion-16,
pre.emotion-16,
samp.emotion-16 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-16 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-28.emotion-28.emotion-28 {
  font-weight: 300;
}

.emotion-28.emotion-28.emotion-28[aria-selected="true"] {
  background-color: var(--bb-palette-primaryTint,#000000);
  color: var(--bb-palette-primary900,#000000);
}

.emotion-28.emotion-28.emotion-28[aria-selected="true"]:hover {
  background-color: #eae8fc;
}

.emotion-28.emotion-28.emotion-28[aria-disabled="true"] {
  color: var(--bb-palette-gray100,#000000);
}

<div
  class="emotion-56 emotion-0 emotion-1 bb-Box bb-SelectMenu"
>
  <div
    aria-controls="test"
    aria-expanded="false"
    aria-haspopup="listbox"
    class="emotion-0 emotion-1 emotion-15 bb-SelectMenuButton bb-Box"
    loop=""
    role="button"
    tabindex="0"
  >
    <div
      class="emotion-0 emotion-1 emotion-2 bb-SelectMenuButtonText bb-Box"
    >
      Search for a fruit...
    </div>
    <div
      class="emotion-0 emotion-1 emotion-12 bb-SelectMenuButtonIconsWrapper bb-Box"
    >
      <div
        class="emotion-7 emotion-0 emotion-1 bb-Box bb-Set"
      >
        <svg
          class="emotion-3 emotion-0 emotion-1 emotion-6 bb-SelectMenuButtonIcon bb-Box bb-Icon"
          role="img"
          viewBox="0 0 448 512"
        >
          <path
            d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    aria-orientation="vertical"
    class="emotion-51 emotion-52 emotion-0 emotion-54 emotion-55 bb-SelectMenuPopover bb-Box bb-DropdownMenuPopover"
    data-dialog="true"
    hidden=""
    id="test"
    loop=""
    role="listbox"
    style="display: none;"
    tabindex="-1"
  >
    <ul
      class="emotion-0 emotion-1 emotion-50 bb-SelectMenuItemsWrapper bb-Box"
    >
      <li
        aria-selected="false"
        class="emotion-20 emotion-21 emotion-0 emotion-1 bb-Box bb-DropdownMenuItem bb-SelectMenuItem"
        id="test-1"
        loop=""
        role="option"
        tabindex="0"
      >
        <span
          class="emotion-16 emotion-0 emotion-1 emotion-6 bb-SelectMenuItemText bb-Box bb-Text"
        >
          Apples
        </span>
      </li>
      <li
        aria-selected="false"
        class="emotion-28 emotion-21 emotion-0 emotion-1 bb-Box bb-DropdownMenuItem bb-SelectMenuItem"
        id="test-2"
        loop=""
        role="option"
        tabindex="-1"
      >
        <span
          class="emotion-16 emotion-0 emotion-1 emotion-6 bb-SelectMenuItemText bb-Box bb-Text"
        >
          Bananas
        </span>
      </li>
      <li
        aria-selected="false"
        class="emotion-28 emotion-21 emotion-0 emotion-1 bb-Box bb-DropdownMenuItem bb-SelectMenuItem"
        id="test-3"
        loop=""
        role="option"
        tabindex="-1"
      >
        <span
          class="emotion-16 emotion-0 emotion-1 emotion-6 bb-SelectMenuItemText bb-Box bb-Text"
        >
          Oranges
        </span>
      </li>
      <li
        aria-selected="false"
        class="emotion-28 emotion-21 emotion-0 emotion-1 bb-Box bb-DropdownMenuItem bb-SelectMenuItem"
        id="test-4"
        loop=""
        role="option"
        tabindex="-1"
      >
        <span
          class="emotion-16 emotion-0 emotion-1 emotion-6 bb-SelectMenuItemText bb-Box bb-Text"
        >
          Mangos
        </span>
      </li>
    </ul>
  </div>
</div>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-56 {
  position: relative;
}

.emotion-55.emotion-55.emotion-55 {
  max-width: 100%;
  width: 100%;
  max-height: 300px;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-50.emotion-50.emotion-50 {
  padding: 0.5rem 0;
  overflow-y: scroll;
}

.emotion-15 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(var(--bb-palette-default,#000000),var(--bb-palette-white600,#000000));
  border: 1px solid var(--bb-palette-white900,#000000);
  border-radius: 6px;
  color: var(--bb-palette-text,#000000);
  height: 2.75em;
  padding: 0.4em 2em 0.4em 0.8em;
  line-height: 1.5;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0.4em 0.8em;
}

.emotion-15[disabled],
.emotion-15[aria-disabled="true"] {
  background: var(--bb-palette-white700,#000000);
  box-shadow: unset;
}

.emotion-15[disabled] + .bb-Icon {
  color: var(--bb-palette-gray400,#000000);
  fill: var(--bb-palette-gray400,#000000);
}

.emotion-15:focus {
  outline: unset;
  z-index: 2;
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primaryTint,#000000) 0px 0px 0px 3px !important;
}

.emotion-15[aria-expanded="true"] {
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primaryTint,#000000) 0px 0px 0px 3px !important;
}

.emotion-2 {
  max-width: calc(100% - 4rem);
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  min-width: 4rem;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-left: -0.5rem;
  margin-top: -0.5rem;
}

.emotion-7.emotion-7.emotion-7 > * {
  margin-left: 0.5rem;
  margin-top: 0.5rem;
}

.emotion-3 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-54 {
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-51 {
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02) !important;
  padding: 0.5rem 0;
  width: 100%;
  position: absolute;
  min-width: 200px;
  width: unset;
}

.emotion-52 {
  background-color: var(--bb-palette-background,#000000);
  border-radius: 6px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-52:focus {
  outline: none;
  box-shadow: var(--bb-palette-primary200,#000000) 0px 0px 0px 3px;
}

.emotion-21 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
  -webkit-transition: background-color 0.1s;
  transition: background-color 0.1s;
}

a.emotion-21 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.emotion-21:hover {
  color: unset;
  fill: unset;
}

.emotion-21[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-21:not(:disabled):focus {
  outline: unset;
  background-color: var(--bb-palette-white600,#000000);
}

.emotion-21:not(:disabled):hover {
  background-color: var(--bb-palette-white600,#000000);
}

.emotion-21:not(:disabled):focus:active,
.emotion-21:not(:disabled):hover:active {
  background-color: var(--bb-palette-white700,#000000);
}

.emotion-21 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-20.emotion-20.emotion-20 {
  font-weight: 300;
}

.emotion-20.emotion-20.emotion-20[aria-selected="true"] {
  background-color: var(--bb-palette-primaryTint,#000000);
  color: var(--bb-palette-primary900,#000000);
  background-color: #eae8fc;
}

.emotion-20.emotion-20.emotion-20[aria-selected="true"]:hover {
  background-color: #eae8fc;
}

.emotion-20.emotion-20.emotion-20[aria-disabled="true"] {
  color: var(--bb-palette-gray100,#000000);
}

.emotion-16 {
  line-height: 1.2;
}

abbr.emotion-16 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-16 {
  font-family: monospace;
}

i.emotion-16 {
  font-style: italic;
}

kbd.emotion-16 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-16 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-16 {
  font-weight: bold;
}

sub.emotion-16,
sup.emotion-16 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-16,
u.emotion-16 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.emotion-16,
cite.emotion-16,
var.emotion-16,
em.emotion-16 {
  font-style: italic;
}

kbd.emotion-16,
pre.emotion-16,
samp.emotion-16 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-16 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-28.emotion-28.emotion-28 {
  font-weight: 300;
}

.emotion-28.emotion-28.emotion-28[aria-selected="true"] {
  background-color: var(--bb-palette-primaryTint,#000000);
  color: var(--bb-palette-primary900,#000000);
}

.emotion-28.emotion-28.emotion-28[aria-selected="true"]:hover {
  background-color: #eae8fc;
}

.emotion-28.emotion-28.emotion-28[aria-disabled="true"] {
  color: var(--bb-palette-gray100,#000000);
}

.emotion-58 {
  color: var(--bb-palette-primary,#000000) !important;
}

<div
  class="emotion-56 emotion-0 emotion-58 bb-Box bb-SelectMenu"
>
  <div
    aria-controls="test"
    aria-expanded="false"
    aria-haspopup="listbox"
    class="emotion-0 emotion-1 emotion-15 bb-SelectMenuButton bb-Box"
    loop=""
    role="button"
    tabindex="0"
  >
    <div
      class="emotion-0 emotion-1 emotion-2 bb-SelectMenuButtonText bb-Box"
    >
      Search for a fruit...
    </div>
    <div
      class="emotion-0 emotion-1 emotion-12 bb-SelectMenuButtonIconsWrapper bb-Box"
    >
      <div
        class="emotion-7 emotion-0 emotion-1 bb-Box bb-Set"
      >
        <svg
          class="emotion-3 emotion-0 emotion-1 emotion-6 bb-SelectMenuButtonIcon bb-Box bb-Icon"
          role="img"
          viewBox="0 0 448 512"
        >
          <path
            d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    aria-orientation="vertical"
    class="emotion-51 emotion-52 emotion-0 emotion-54 emotion-55 bb-SelectMenuPopover bb-Box bb-DropdownMenuPopover"
    data-dialog="true"
    hidden=""
    id="test"
    loop=""
    role="listbox"
    style="display: none;"
    tabindex="-1"
  >
    <ul
      class="emotion-0 emotion-1 emotion-50 bb-SelectMenuItemsWrapper bb-Box"
    >
      <li
        aria-selected="false"
        class="emotion-20 emotion-21 emotion-0 emotion-1 bb-Box bb-DropdownMenuItem bb-SelectMenuItem"
        id="test-1"
        loop=""
        role="option"
        tabindex="0"
      >
        <span
          class="emotion-16 emotion-0 emotion-1 emotion-6 bb-SelectMenuItemText bb-Box bb-Text"
        >
          Apples
        </span>
      </li>
      <li
        aria-selected="false"
        class="emotion-28 emotion-21 emotion-0 emotion-1 bb-Box bb-DropdownMenuItem bb-SelectMenuItem"
        id="test-2"
        loop=""
        role="option"
        tabindex="-1"
      >
        <span
          class="emotion-16 emotion-0 emotion-1 emotion-6 bb-SelectMenuItemText bb-Box bb-Text"
        >
          Bananas
        </span>
      </li>
      <li
        aria-selected="false"
        class="emotion-28 emotion-21 emotion-0 emotion-1 bb-Box bb-DropdownMenuItem bb-SelectMenuItem"
        id="test-3"
        loop=""
        role="option"
        tabindex="-1"
      >
        <span
          class="emotion-16 emotion-0 emotion-1 emotion-6 bb-SelectMenuItemText bb-Box bb-Text"
        >
          Oranges
        </span>
      </li>
      <li
        aria-selected="false"
        class="emotion-28 emotion-21 emotion-0 emotion-1 bb-Box bb-DropdownMenuItem bb-SelectMenuItem"
        id="test-4"
        loop=""
        role="option"
        tabindex="-1"
      >
        <span
          class="emotion-16 emotion-0 emotion-1 emotion-6 bb-SelectMenuItemText bb-Box bb-Text"
        >
          Mangos
        </span>
      </li>
    </ul>
  </div>
</div>
`;

exports[`theming styles.base should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-55.emotion-55.emotion-55 {
  max-width: 100%;
  width: 100%;
  max-height: 300px;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-50.emotion-50.emotion-50 {
  padding: 0.5rem 0;
  overflow-y: scroll;
}

.emotion-15 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(var(--bb-palette-default,#000000),var(--bb-palette-white600,#000000));
  border: 1px solid var(--bb-palette-white900,#000000);
  border-radius: 6px;
  color: var(--bb-palette-text,#000000);
  height: 2.75em;
  padding: 0.4em 2em 0.4em 0.8em;
  line-height: 1.5;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0.4em 0.8em;
}

.emotion-15[disabled],
.emotion-15[aria-disabled="true"] {
  background: var(--bb-palette-white700,#000000);
  box-shadow: unset;
}

.emotion-15[disabled] + .bb-Icon {
  color: var(--bb-palette-gray400,#000000);
  fill: var(--bb-palette-gray400,#000000);
}

.emotion-15:focus {
  outline: unset;
  z-index: 2;
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primaryTint,#000000) 0px 0px 0px 3px !important;
}

.emotion-15[aria-expanded="true"] {
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primaryTint,#000000) 0px 0px 0px 3px !important;
}

.emotion-2 {
  max-width: calc(100% - 4rem);
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  min-width: 4rem;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-left: -0.5rem;
  margin-top: -0.5rem;
}

.emotion-7.emotion-7.emotion-7 > * {
  margin-left: 0.5rem;
  margin-top: 0.5rem;
}

.emotion-3 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-54 {
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-51 {
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02) !important;
  padding: 0.5rem 0;
  width: 100%;
  position: absolute;
  min-width: 200px;
  width: unset;
}

.emotion-52 {
  background-color: var(--bb-palette-background,#000000);
  border-radius: 6px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-52:focus {
  outline: none;
  box-shadow: var(--bb-palette-primary200,#000000) 0px 0px 0px 3px;
}

.emotion-21 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
  -webkit-transition: background-color 0.1s;
  transition: background-color 0.1s;
}

a.emotion-21 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.emotion-21:hover {
  color: unset;
  fill: unset;
}

.emotion-21[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-21:not(:disabled):focus {
  outline: unset;
  background-color: var(--bb-palette-white600,#000000);
}

.emotion-21:not(:disabled):hover {
  background-color: var(--bb-palette-white600,#000000);
}

.emotion-21:not(:disabled):focus:active,
.emotion-21:not(:disabled):hover:active {
  background-color: var(--bb-palette-white700,#000000);
}

.emotion-21 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-20.emotion-20.emotion-20 {
  font-weight: 300;
}

.emotion-20.emotion-20.emotion-20[aria-selected="true"] {
  background-color: var(--bb-palette-primaryTint,#000000);
  color: var(--bb-palette-primary900,#000000);
  background-color: #eae8fc;
}

.emotion-20.emotion-20.emotion-20[aria-selected="true"]:hover {
  background-color: #eae8fc;
}

.emotion-20.emotion-20.emotion-20[aria-disabled="true"] {
  color: var(--bb-palette-gray100,#000000);
}

.emotion-16 {
  line-height: 1.2;
}

abbr.emotion-16 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-16 {
  font-family: monospace;
}

i.emotion-16 {
  font-style: italic;
}

kbd.emotion-16 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-16 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-16 {
  font-weight: bold;
}

sub.emotion-16,
sup.emotion-16 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-16,
u.emotion-16 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.emotion-16,
cite.emotion-16,
var.emotion-16,
em.emotion-16 {
  font-style: italic;
}

kbd.emotion-16,
pre.emotion-16,
samp.emotion-16 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-16 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-28.emotion-28.emotion-28 {
  font-weight: 300;
}

.emotion-28.emotion-28.emotion-28[aria-selected="true"] {
  background-color: var(--bb-palette-primaryTint,#000000);
  color: var(--bb-palette-primary900,#000000);
}

.emotion-28.emotion-28.emotion-28[aria-selected="true"]:hover {
  background-color: #eae8fc;
}

.emotion-28.emotion-28.emotion-28[aria-disabled="true"] {
  color: var(--bb-palette-gray100,#000000);
}

.emotion-56 {
  position: relative;
}

.emotion-56 {
  background-color: var(--bb-palette-red,#ff0000);
}

<div
  class="emotion-56 emotion-0 emotion-1 bb-Box bb-SelectMenu"
>
  <div
    aria-controls="test"
    aria-expanded="false"
    aria-haspopup="listbox"
    class="emotion-0 emotion-1 emotion-15 bb-SelectMenuButton bb-Box"
    loop=""
    role="button"
    tabindex="0"
  >
    <div
      class="emotion-0 emotion-1 emotion-2 bb-SelectMenuButtonText bb-Box"
    >
      Search for a fruit...
    </div>
    <div
      class="emotion-0 emotion-1 emotion-12 bb-SelectMenuButtonIconsWrapper bb-Box"
    >
      <div
        class="emotion-7 emotion-0 emotion-1 bb-Box bb-Set"
      >
        <svg
          class="emotion-3 emotion-0 emotion-1 emotion-6 bb-SelectMenuButtonIcon bb-Box bb-Icon"
          role="img"
          viewBox="0 0 448 512"
        >
          <path
            d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    aria-orientation="vertical"
    class="emotion-51 emotion-52 emotion-0 emotion-54 emotion-55 bb-SelectMenuPopover bb-Box bb-DropdownMenuPopover"
    data-dialog="true"
    hidden=""
    id="test"
    loop=""
    role="listbox"
    style="display: none;"
    tabindex="-1"
  >
    <ul
      class="emotion-0 emotion-1 emotion-50 bb-SelectMenuItemsWrapper bb-Box"
    >
      <li
        aria-selected="false"
        class="emotion-20 emotion-21 emotion-0 emotion-1 bb-Box bb-DropdownMenuItem bb-SelectMenuItem"
        id="test-1"
        loop=""
        role="option"
        tabindex="0"
      >
        <span
          class="emotion-16 emotion-0 emotion-1 emotion-6 bb-SelectMenuItemText bb-Box bb-Text"
        >
          Apples
        </span>
      </li>
      <li
        aria-selected="false"
        class="emotion-28 emotion-21 emotion-0 emotion-1 bb-Box bb-DropdownMenuItem bb-SelectMenuItem"
        id="test-2"
        loop=""
        role="option"
        tabindex="-1"
      >
        <span
          class="emotion-16 emotion-0 emotion-1 emotion-6 bb-SelectMenuItemText bb-Box bb-Text"
        >
          Bananas
        </span>
      </li>
      <li
        aria-selected="false"
        class="emotion-28 emotion-21 emotion-0 emotion-1 bb-Box bb-DropdownMenuItem bb-SelectMenuItem"
        id="test-3"
        loop=""
        role="option"
        tabindex="-1"
      >
        <span
          class="emotion-16 emotion-0 emotion-1 emotion-6 bb-SelectMenuItemText bb-Box bb-Text"
        >
          Oranges
        </span>
      </li>
      <li
        aria-selected="false"
        class="emotion-28 emotion-21 emotion-0 emotion-1 bb-Box bb-DropdownMenuItem bb-SelectMenuItem"
        id="test-4"
        loop=""
        role="option"
        tabindex="-1"
      >
        <span
          class="emotion-16 emotion-0 emotion-1 emotion-6 bb-SelectMenuItemText bb-Box bb-Text"
        >
          Mangos
        </span>
      </li>
    </ul>
  </div>
</div>
`;

exports[`variants styles.base should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-55.emotion-55.emotion-55 {
  max-width: 100%;
  width: 100%;
  max-height: 300px;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-50.emotion-50.emotion-50 {
  padding: 0.5rem 0;
  overflow-y: scroll;
}

.emotion-15 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(var(--bb-palette-default,#000000),var(--bb-palette-white600,#000000));
  border: 1px solid var(--bb-palette-white900,#000000);
  border-radius: 6px;
  color: var(--bb-palette-text,#000000);
  height: 2.75em;
  padding: 0.4em 2em 0.4em 0.8em;
  line-height: 1.5;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0.4em 0.8em;
}

.emotion-15[disabled],
.emotion-15[aria-disabled="true"] {
  background: var(--bb-palette-white700,#000000);
  box-shadow: unset;
}

.emotion-15[disabled] + .bb-Icon {
  color: var(--bb-palette-gray400,#000000);
  fill: var(--bb-palette-gray400,#000000);
}

.emotion-15:focus {
  outline: unset;
  z-index: 2;
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primaryTint,#000000) 0px 0px 0px 3px !important;
}

.emotion-15[aria-expanded="true"] {
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primaryTint,#000000) 0px 0px 0px 3px !important;
}

.emotion-2 {
  max-width: calc(100% - 4rem);
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  min-width: 4rem;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-left: -0.5rem;
  margin-top: -0.5rem;
}

.emotion-7.emotion-7.emotion-7 > * {
  margin-left: 0.5rem;
  margin-top: 0.5rem;
}

.emotion-3 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-54 {
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-51 {
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02) !important;
  padding: 0.5rem 0;
  width: 100%;
  position: absolute;
  min-width: 200px;
  width: unset;
}

.emotion-52 {
  background-color: var(--bb-palette-background,#000000);
  border-radius: 6px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-52:focus {
  outline: none;
  box-shadow: var(--bb-palette-primary200,#000000) 0px 0px 0px 3px;
}

.emotion-21 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
  -webkit-transition: background-color 0.1s;
  transition: background-color 0.1s;
}

a.emotion-21 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.emotion-21:hover {
  color: unset;
  fill: unset;
}

.emotion-21[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-21:not(:disabled):focus {
  outline: unset;
  background-color: var(--bb-palette-white600,#000000);
}

.emotion-21:not(:disabled):hover {
  background-color: var(--bb-palette-white600,#000000);
}

.emotion-21:not(:disabled):focus:active,
.emotion-21:not(:disabled):hover:active {
  background-color: var(--bb-palette-white700,#000000);
}

.emotion-21 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-20.emotion-20.emotion-20 {
  font-weight: 300;
}

.emotion-20.emotion-20.emotion-20[aria-selected="true"] {
  background-color: var(--bb-palette-primaryTint,#000000);
  color: var(--bb-palette-primary900,#000000);
  background-color: #eae8fc;
}

.emotion-20.emotion-20.emotion-20[aria-selected="true"]:hover {
  background-color: #eae8fc;
}

.emotion-20.emotion-20.emotion-20[aria-disabled="true"] {
  color: var(--bb-palette-gray100,#000000);
}

.emotion-16 {
  line-height: 1.2;
}

abbr.emotion-16 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-16 {
  font-family: monospace;
}

i.emotion-16 {
  font-style: italic;
}

kbd.emotion-16 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-16 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-16 {
  font-weight: bold;
}

sub.emotion-16,
sup.emotion-16 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-16,
u.emotion-16 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.emotion-16,
cite.emotion-16,
var.emotion-16,
em.emotion-16 {
  font-style: italic;
}

kbd.emotion-16,
pre.emotion-16,
samp.emotion-16 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-16 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-28.emotion-28.emotion-28 {
  font-weight: 300;
}

.emotion-28.emotion-28.emotion-28[aria-selected="true"] {
  background-color: var(--bb-palette-primaryTint,#000000);
  color: var(--bb-palette-primary900,#000000);
}

.emotion-28.emotion-28.emotion-28[aria-selected="true"]:hover {
  background-color: #eae8fc;
}

.emotion-28.emotion-28.emotion-28[aria-disabled="true"] {
  color: var(--bb-palette-gray100,#000000);
}

.emotion-56 {
  position: relative;
}

.emotion-56 {
  background-color: var(--bb-palette-red,#ff0000);
}

<div
  class="emotion-56 emotion-0 emotion-1 bb-Box bb-SelectMenu"
>
  <div
    aria-controls="test"
    aria-expanded="false"
    aria-haspopup="listbox"
    class="emotion-0 emotion-1 emotion-15 bb-SelectMenuButton bb-Box"
    loop=""
    role="button"
    tabindex="0"
  >
    <div
      class="emotion-0 emotion-1 emotion-2 bb-SelectMenuButtonText bb-Box"
    >
      Search for a fruit...
    </div>
    <div
      class="emotion-0 emotion-1 emotion-12 bb-SelectMenuButtonIconsWrapper bb-Box"
    >
      <div
        class="emotion-7 emotion-0 emotion-1 bb-Box bb-Set"
      >
        <svg
          class="emotion-3 emotion-0 emotion-1 emotion-6 bb-SelectMenuButtonIcon bb-Box bb-Icon"
          role="img"
          viewBox="0 0 448 512"
        >
          <path
            d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    aria-orientation="vertical"
    class="emotion-51 emotion-52 emotion-0 emotion-54 emotion-55 bb-SelectMenuPopover bb-Box bb-DropdownMenuPopover"
    data-dialog="true"
    hidden=""
    id="test"
    loop=""
    role="listbox"
    style="display: none;"
    tabindex="-1"
  >
    <ul
      class="emotion-0 emotion-1 emotion-50 bb-SelectMenuItemsWrapper bb-Box"
    >
      <li
        aria-selected="false"
        class="emotion-20 emotion-21 emotion-0 emotion-1 bb-Box bb-DropdownMenuItem bb-SelectMenuItem"
        id="test-1"
        loop=""
        role="option"
        tabindex="0"
      >
        <span
          class="emotion-16 emotion-0 emotion-1 emotion-6 bb-SelectMenuItemText bb-Box bb-Text"
        >
          Apples
        </span>
      </li>
      <li
        aria-selected="false"
        class="emotion-28 emotion-21 emotion-0 emotion-1 bb-Box bb-DropdownMenuItem bb-SelectMenuItem"
        id="test-2"
        loop=""
        role="option"
        tabindex="-1"
      >
        <span
          class="emotion-16 emotion-0 emotion-1 emotion-6 bb-SelectMenuItemText bb-Box bb-Text"
        >
          Bananas
        </span>
      </li>
      <li
        aria-selected="false"
        class="emotion-28 emotion-21 emotion-0 emotion-1 bb-Box bb-DropdownMenuItem bb-SelectMenuItem"
        id="test-3"
        loop=""
        role="option"
        tabindex="-1"
      >
        <span
          class="emotion-16 emotion-0 emotion-1 emotion-6 bb-SelectMenuItemText bb-Box bb-Text"
        >
          Oranges
        </span>
      </li>
      <li
        aria-selected="false"
        class="emotion-28 emotion-21 emotion-0 emotion-1 bb-Box bb-DropdownMenuItem bb-SelectMenuItem"
        id="test-4"
        loop=""
        role="option"
        tabindex="-1"
      >
        <span
          class="emotion-16 emotion-0 emotion-1 emotion-6 bb-SelectMenuItemText bb-Box bb-Text"
        >
          Mangos
        </span>
      </li>
    </ul>
  </div>
</div>
`;
